Ajustado metodos de envio e criado dialog de sucesso de envio

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -75,6 +75,7 @@ See https://github.com/adobe-type-tools/cmap-resources
           "web-pdf_attachment_viewer": "./pdf_attachment_viewer.js",
           "web-pdf_cursor_tools": "./pdf_cursor_tools.js",
           "web-pdf_document_properties": "./pdf_document_properties.js",
+          "web-pdf_save_cfaz_dialog": "./pdf_save_cfaz_dialog.js",
           "web-pdf_find_bar": "./pdf_find_bar.js",
           "web-pdf_layer_viewer": "./pdf_layer_viewer.js",
           "web-pdf_outline_viewer": "./pdf_outline_viewer.js",
@@ -244,7 +245,7 @@ See https://github.com/adobe-type-tools/cmap-resources
         <div id="secondaryToolbar" class="secondaryToolbar hidden doorHangerRight">
           <div id="secondaryToolbarButtonContainer">
 <!--#if GENERIC-->
-            <button id="secondaryOpenFile" class="secondaryToolbarButton" title="Open File" tabindex="51" data-l10n-id="pdfjs-open-file-button">
+            <button style="display: none;" id="secondaryOpenFile" class="secondaryToolbarButton" title="Open File" tabindex="51" data-l10n-id="pdfjs-open-file-button">
               <span data-l10n-id="pdfjs-open-file-button-label">Open</span>
             </button>
 <!--#endif-->
@@ -406,8 +407,8 @@ See https://github.com/adobe-type-tools/cmap-resources
                     <span data-l10n-id="zoom_in_label">Zoom In</span>
                   </button>
                   <div class="splitToolbarButtonSeparator"></div>
-                  <button id="customButton" class="toolbarButton saveButton" title="Save" tabindex="23" data-l10n-id="save">
-                    Save
+                  <button id="saveCfaz" class="toolbarButton saveButton" title="Save" tabindex="23" data-l10n-id="save">
+                    <p data-l10n-id="save_label">Save</p>
                   </button>
                 </div>
                 <span id="scaleSelectContainer" class="dropdownToolbarButton">
@@ -577,6 +578,14 @@ See https://github.com/adobe-type-tools/cmap-resources
           </div>
         </dialog>
 <!--#endif-->
+        <dialog id="saveCfazDialog" style="min-width: 200px;">
+          <div class="row">
+            <span id="saveCfazDialogMessage">Enviando arquivo…</span>
+          </div>
+          <div class="buttonRow" style="display: none">
+            <button id="saveCfazDialogClose" class="dialogButton"><span >Fechar</span></button>
+          </div>
+        </dialog>
 <!--#if CHROME-->
 <!--#include viewer-snippet-chrome-overlays.html-->
 <!--#endif-->
