--- a/web/viewer.html
+++ b/web/viewer.html
@@ -27,7 +27,10 @@ See https://github.com/adobe-type-tools/cmap-resources
 <!--#if GENERIC || CHROME-->
     <meta name="google" content="notranslate">
 <!--#endif-->
-    <title>PDF.js viewer</title>    
+    <title>PDF.js viewer</title>
+    
+    <!-- Descomentar a tag csrf abaixo para funcionar as requisicoes com o cfaz-max -->
+    <!-- <%= csrf_meta_tags %> -->
 
 <!--#if MOZCENTRAL-->
 <!--#include viewer-snippet-firefox-extension.html-->
