--- a/web/viewer.html
+++ b/web/viewer.html
@@ -27,10 +27,7 @@ See https://github.com/adobe-type-tools/cmap-resources
 <!--#if GENERIC || CHROME-->
     <meta name="google" content="notranslate">
 <!--#endif-->
-    <title>PDF.js viewer</title>
-    
-    <!-- Descomentar a tag csrf abaixo para funcionar as requisicoes com o cfaz-max -->
-    <!-- <%= csrf_meta_tags %> -->
+    <title>PDF.js viewer</title>    
 
 <!--#if MOZCENTRAL-->
 <!--#include viewer-snippet-firefox-extension.html-->
@@ -314,8 +311,8 @@ See https://github.com/adobe-type-tools/cmap-resources
                 <button id="backButton" class="toolbarButton customButton" title="Back" tabindex="12" data-l10n-id="back">
                   <p data-l10n-id="back_label">Voltar</p>
                 </button>
-                <button id="viewFind" class="toolbarButton" title="Find in Document" tabindex="13" data-l10n-id="findbar" aria-expanded="false" aria-controls="findbar">
-                  <span data-l10n-id="findbar_label">Find</span>
+                <button id="viewFind" class="toolbarButton" title="Find in Document" tabindex="13" data-l10n-id="pdfjs-findbar-button" aria-expanded="false" aria-controls="findbar">
+                  <span data-l10n-id="pdfjs-findbar-button-label">Find</span>
                 </button>                
                 <div class="splitToolbarButton hiddenSmallView">
                   <button class="toolbarButton" title="Previous Page" id="previous" tabindex="14" data-l10n-id="previous">
@@ -373,8 +370,8 @@ See https://github.com/adobe-type-tools/cmap-resources
                     <span data-l10n-id="zoom_in_label">Zoom In</span>
                   </button>
                   <div class="splitToolbarButtonSeparator"></div>
-                  <button id="saveCfaz" class="toolbarButton saveButton" title="Save" tabindex="23" data-l10n-id="save">
-                    <p data-l10n-id="save_label">Save</p>
+                  <button id="saveCfaz" class="toolbarButton customButton" title="Save" tabindex="23" data-l10n-id="save">
+                    <p data-l10n-id="save_label">Salvar</p>
                   </button>
                 </div>
                 <span id="scaleSelectContainer" class="dropdownToolbarButton">
